added next example notebook

--- a/main.ipynb
+++ b/main.ipynb
@@ -16,6 +16,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Retrieving notices: ...working... done\n",
       "Channels:\n",
       " - conda-forge\n",
       " - defaults\n",
@@ -27,7 +28,11 @@
       "\n",
       "\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
+      "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+      "langchain-community 0.2.16 requires langchain-core<0.3.0,>=0.2.38, but you have langchain-core 0.3.12 which is incompatible.\n",
+      "langchain 0.2.16 requires langchain-core<0.3.0,>=0.2.38, but you have langchain-core 0.3.12 which is incompatible.\n",
+      "langchain-text-splitters 0.2.4 requires langchain-core<0.3.0,>=0.2.38, but you have langchain-core 0.3.12 which is incompatible.\u001b[0m\u001b[31m\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
       "Requirement already satisfied: beautifulsoup4 in /home/awkwabear/anaconda3/envs/ragmodel/lib/python3.12/site-packages (4.12.3)\n",
       "Requirement already satisfied: soupsieve>1.2 in /home/awkwabear/anaconda3/envs/ragmodel/lib/python3.12/site-packages (from beautifulsoup4) (2.6)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
@@ -97,16 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Task Decomposition is the process of breaking down complex tasks into smaller, more manageable steps to facilitate planning and execution. This can be achieved through techniques like Chain of Thought (CoT), where the model is prompted to think step-by-step, or by using task-specific instructions. It can also involve human inputs to further clarify and structure the subtasks involved.'"
+       "'A Scientific Discovery Agent, like ChemCrow, is a domain-specific tool that combines a large language model (LLM) with expert-designed tools to facilitate tasks in areas such as organic synthesis, drug discovery, and materials design. It utilizes a structured workflow that incorporates reasoning and actions based on user prompts, following a format known as ReAct. This agent is designed to assist in scientific inquiries while considering the associated risks of misuse, particularly concerning sensitive applications.'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +157,7 @@
     "    | StrOutputParser()\n",
     ")\n",
     "\n",
-    "rag_chain.invoke(\"What is Task Decomposition?\")"
+    "rag_chain.invoke(\"What is a Scientific Discovery Agent?\")"
    ]
   },
   {
