added .env for api keys, updated gitignore

--- a/rag_evaluation.ipynb
+++ b/rag_evaluation.ipynb
@@ -42,7 +42,7 @@
     "# Initial Conda Environment Setup\n",
     "- In command line:\n",
     "    - `conda create -n <PICK SOME ENVIRONMENT NAME>`\n",
-    "    - `conda install python=3.12 pytorch pytorch-cuda transformers accelerate sentence-transformers faiss-gpu openpyxl -c pytorch -c nvidia -c conda-forge -y`\n",
+    "    - `conda install python=3.12 pytorch pytorch-cuda transformers accelerate sentence-transformers faiss-gpu openpyxl python-dotenv -c pytorch -c nvidia -c conda-forge -y`\n",
     "- Create open this notebook in VScode and set the jupyter interpreter to `<PICK SOME ENVIRONMENT NAME>`\n",
     "\n",
     "## Run the pip install below for the rest of the required packages\n"
@@ -73,28 +73,56 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "import os\n",
+    "\n",
+    "# Load environment variables from the .env file\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "id": "oIlNZ1Mn9jVL"
    },
    "outputs": [],
    "source": [
-    "from tqdm.auto import tqdm\n",
-    "import pandas as pd\n",
-    "from typing import Optional, List, Tuple\n",
-    "import json\n",
-    "import datasets\n",
+    "from tqdm.auto import tqdm # importing a library for progress bars\n",
+    "import pandas as pd # panas is a library for data manipulation\n",
+    "from typing import Optional, List, Tuple # importing some type hints\n",
+    "import json # importing a library for working with json\n",
+    "import datasets # importing the datasets library\n",
     "\n",
-    "pd.set_option(\"display.max_colwidth\", None)"
+    "pd.set_option(\"display.max_colwidth\", None) # setting the maximum column width for pandas"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "88e7a647c67e49259009ef0c9c2aa8c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HTML(value='<center> <img\\nsrc=https://huggingface.co/front/assets/huggingface_logo-noborder.sv…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "from huggingface_hub import notebook_login\n",
+    "from huggingface_hub import notebook_login \n",
     "notebook_login()"
    ]
   },
@@ -757,7 +785,7 @@
     "\n",
     "repo_id = \"HuggingFaceH4/zephyr-7b-beta\"\n",
     "READER_MODEL_NAME = \"zephyr-7b-beta\"\n",
-    "HF_API_TOKEN = \"\"\n",
+    "HF_API_TOKEN = os.getenv(\"HF_API_TOKEN\")\n",
     "\n",
     "READER_LLM = HuggingFaceHub(\n",
     "    repo_id=repo_id,\n",
@@ -962,7 +990,7 @@
    "source": [
     "from langchain.chat_models import ChatOpenAI\n",
     "\n",
-    "OPENAI_API_KEY = \"\"\n",
+    "OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
     "\n",
     "eval_chat_model = ChatOpenAI(model=\"gpt-4-1106-preview\", temperature=0, openai_api_key=OPENAI_API_KEY)\n",
     "evaluator_name = \"GPT4\"\n",
