--- a/rag_evaluation.ipynb
+++ b/rag_evaluation.ipynb
@@ -81,12 +81,14 @@
     "import os\n",
     "\n",
     "# Load environment variables from the .env file\n",
-    "load_dotenv()"
+    "load_dotenv()\n",
+    "# print(f\"Hugging Face API Token: {os.getenv(\"HF_API_TOKEN\")} \")\n",
+    "# print(f\"OpenAI API Key: {os.getenv(\"OPENAI_API_KEY\")} \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {
     "id": "oIlNZ1Mn9jVL"
    },
@@ -103,24 +105,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "88e7a647c67e49259009ef0c9c2aa8c4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='<center> <img\\nsrc=https://huggingface.co/front/assets/huggingface_logo-noborder.sv…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from huggingface_hub import notebook_login \n",
     "notebook_login()"
@@ -137,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "id": "YRbm5tNF9jVM"
    },
@@ -242,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "id": "hIM_DJRo9jVN"
    },
@@ -353,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {
     "id": "05aSgTGs9jVO"
    },
@@ -534,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {
     "id": "Q3RRz4W79jVO"
    },
@@ -595,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {
     "id": "sz9Jw2_q9jVO"
    },
@@ -658,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {
     "id": "LqJlIDZR9jVO"
    },
@@ -741,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {
     "id": "9PdpuWyP9jVP"
    },
@@ -802,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {
     "id": "QZ62CbcZ9jVP"
    },
@@ -872,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {
     "id": "VrlMh_ZI9jVP"
    },
@@ -926,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {
     "id": "Ae-3KWzK9jVP"
    },
