updated install command syntax

--- a/openAIrag_evaluation.ipynb
+++ b/openAIrag_evaluation.ipynb
@@ -56,12 +56,12 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -q torch transformers transformers langchain sentence-transformers tqdm openpyxl openai pandas datasets langchain-community ragatouille ipywidgets jupyter plotly"
+    "%pip install -q torch transformers transformers langchain sentence-transformers tqdm openpyxl openai pandas datasets langchain-community ragatouille ipywidgets jupyter plotly"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "k_lJFbYm9jVL"
    },
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "oIlNZ1Mn9jVL"
    },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "id": "hIM_DJRo9jVN"
    },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "05aSgTGs9jVO"
    },
@@ -505,7 +505,7 @@
     "\n",
     "eval_dataset = datasets.Dataset.from_pandas(\n",
     "    generated_questions, split=\"train\", preserve_index=False\n",
-    ")"
+    ")whi"
    ]
   },
   {
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "id": "LqJlIDZR9jVO"
    },
@@ -728,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "id": "9PdpuWyP9jVP"
    },
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "QZ62CbcZ9jVP"
    },
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "id": "VrlMh_ZI9jVP"
    },
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {
     "id": "Ae-3KWzK9jVP"
    },
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "id": "D4YDSfmr9jVT"
    },
@@ -1102,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "id": "CdkXMNvS9jVT"
    },
