updated to add langchain API call instructions

--- a/openAIrag_evaluation.ipynb
+++ b/openAIrag_evaluation.ipynb
@@ -2036,7 +2036,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MAKE SURE YOU CREATE A HUGGING FACE API KEY AND ADD IT BELOW IN `OPEN_AI_KEY = \"\"`"
+    "# MAKE SURE YOU CREATE A HUGGING FACE API KEY AND ADD IT BELOW IN `OPEN_AI_KEY = \"\"`\n",
+    "\n",
+    "- Other chat models can be loaded following the documentation for [langchain here](https://python.langchain.com/v0.1/docs/modules/model_io/chat/quick_start/)"
    ]
   },
   {
