began refactor completed HF docs loading and json export
working on fixing text splitter and removing other JSON checkpoints

--- a/refactor.ipynb
+++ b/refactor.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {
     "id": "bCKBvOcp9jVK"
    },
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {
     "id": "k_lJFbYm9jVL"
    },
@@ -84,14 +84,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "import os\n",
     "from tqdm.auto import tqdm # importing a library for progress bars\n",
-    "import pandas as pd # panas is a library for data manipulation\n",
+    "import pandas as pd # pandas is a library for data manipulation\n",
     "from typing import Optional, List, Tuple # importing some type hints\n",
     "import json # importing a library for working with json\n",
     "import datasets # importing the datasets library\n",
@@ -117,17 +117,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load Environment variables from .env file\n",
+    "- Loads API keys etc. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Will print true if the .env file is loaded, false if not\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,21 +152,23 @@
     "import os\n",
     "\n",
     "# Load environment variables from the .env file\n",
+    "print(\"Will print true if the .env file is loaded, false if not\")\n",
     "load_dotenv()\n",
+    "\n",
+    "\n",
     "# print(f\"Hugging Face API Token: {os.getenv(\"HF_API_TOKEN\")} \")\n",
     "# print(f\"OpenAI API Key: {os.getenv(\"OPENAI_API_KEY\")} \")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "id": "oIlNZ1Mn9jVL"
    },
    "outputs": [],
    "source": [
-    "from tqdm.auto import tqdm # importing a library for progress bars\n",
-    "import pandas as pd # panas is a library for data manipulation\n",
+    "import pandas as pd # pandas is a library for data manipulation\n",
     "from typing import Optional, List, Tuple # importing some type hints\n",
     "import json # importing a library for working with json\n",
     "import datasets # importing the datasets library\n",
@@ -160,92 +177,66 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab8ff409b93243e3b614cac87149d976",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HTML(value='<center> <img\\nsrc=https://huggingface.co/front/assets/huggingface_logo-noborder.sv…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "from huggingface_hub import notebook_login \n",
-    "notebook_login()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "zeW8P62J9jVM"
-   },
-   "source": [
-    "### Load your knowledge base"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {
-    "id": "YRbm5tNF9jVM"
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Load the dataset (Original)\n",
-    "ds = datasets.load_dataset(\"m-ric/huggingface_doc\", split=\"train\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Section that saves the loaded text and source data into a JSON file"
+    "## Download Hugging Face Doc Dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset saved to ./huggingface_doc_dataset.json\n"
+      "Dataset saved to ./hf_docs_dataset/huggingface_doc_dataset.json\n"
      ]
     }
    ],
    "source": [
-    "from datasets import load_dataset\n",
+    "import os\n",
     "import json\n",
-    "from langchain.docstore.document import Document as LangchainDocument\n",
-    "from tqdm import tqdm\n",
+    "from datasets import load_dataset\n",
     "\n",
-    "# Load the dataset from Hugging Face\n",
-    "ds = load_dataset(\"m-ric/huggingface_doc\", split=\"train\")\n",
+    "def recreate_dataset():\n",
+    "    # Log in to the Hugging Face Hub\n",
+    "    hf_api_token = os.getenv(\"HF_API_TOKEN\")\n",
+    "    if not hf_api_token:\n",
+    "        raise EnvironmentError(\"HF_API_TOKEN is not set in the environment.\")\n",
+    "    login(hf_api_token)\n",
     "\n",
-    "# Convert the dataset to a list of dictionaries\n",
-    "data_list = [doc for doc in ds]\n",
+    "    # Load the dataset from Hugging Face\n",
+    "    ds = load_dataset(\"m-ric/huggingface_doc\", split=\"train\")\n",
     "\n",
-    "# Define the output file path\n",
-    "output_file_path = \"./huggingface_doc_dataset.json\"\n",
+    "    # Convert the dataset to a list of dictionaries\n",
+    "    data_list = [doc for doc in ds]\n",
     "\n",
-    "# Write the dataset content to a JSON file\n",
-    "with open(output_file_path, \"w\", encoding=\"utf-8\") as f:\n",
-    "    json.dump(data_list, f, ensure_ascii=False, indent=4)\n",
+    "    # Ensure the directory exists\n",
+    "    os.makedirs(os.path.dirname(path_hf_doc_dataset), exist_ok=True)\n",
     "\n",
-    "print(f\"Dataset saved to {output_file_path}\")"
+    "    # Write the dataset content to a JSON file\n",
+    "    with open(path_hf_doc_dataset, \"w\", encoding=\"utf-8\") as f:\n",
+    "        json.dump(data_list, f, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "    print(f\"Dataset saved to {path_hf_doc_dataset}\")\n",
+    "    return data_list\n",
+    "\n",
+    "# File path for the dataset\n",
+    "path_hf_doc_dataset = \"./hf_docs_dataset/huggingface_doc_dataset.json\"\n",
+    "\n",
+    "# Check if the dataset file exists\n",
+    "if os.path.exists(path_hf_doc_dataset) and os.path.getsize(path_hf_doc_dataset) > 0:\n",
+    "    try:\n",
+    "        with open(path_hf_doc_dataset, \"r\", encoding=\"utf-8\") as f:\n",
+    "            data_list = json.load(f)\n",
+    "    except (json.JSONDecodeError, OSError) as e:\n",
+    "        print(f\"Error loading JSON file: {e}. Recreating dataset.\")\n",
+    "        data_list = recreate_dataset()\n",
+    "else:\n",
+    "    data_list = recreate_dataset()\n"
    ]
   },
   {
@@ -271,26 +262,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {
     "id": "3gTOlRKO9jVM"
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 2647/2647 [00:00<00:00, 64683.77it/s]\n"
-     ]
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "19a17a51e9494c20b6eb067646c9d772",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/2647 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
     "from langchain.text_splitter import RecursiveCharacterTextSplitter\n",
     "from langchain.docstore.document import Document as LangchainDocument\n",
+    "from tqdm.auto import tqdm\n",
     "\n",
     "langchain_docs = [\n",
     "    LangchainDocument(page_content=doc[\"text\"], metadata={\"source\": doc[\"source\"]})\n",
-    "    for doc in tqdm(ds)\n",
+    "    for doc in tqdm(data_list)\n",
     "]\n",
     "\n",
     "\n",
@@ -315,28 +314,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processed documents saved to ./processed_documents.json\n"
+      "Processed documents saved to ./hf_docs_dataset/langchain_split_huggingface_doc_dataset.json\n"
      ]
     }
    ],
    "source": [
     "import json\n",
     "\n",
+    "\n",
+    "\n",
     "# Define output file paths\n",
-    "output_json_file_path = \"./processed_documents.json\"\n",
+    "langchain_processed_json_file_path = \"./hf_docs_dataset/langchain_split_huggingface_doc_dataset.json\"\n",
+    "\n",
+    "# Ensure the directory exists\n",
+    "os.makedirs(os.path.dirname(path_hf_doc_dataset), exist_ok=True)\n",
+    "\n",
+    "if os.path.exists(langchain_processed_json_file_path):\n",
+    "    with open(langchain_processed_json_file_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "        data_list = json.load(f)\n",
     "\n",
     "# Write the processed documents to a JSON file\n",
-    "with open(output_json_file_path, \"w\", encoding=\"utf-8\") as f:\n",
+    "with open(langchain_processed_json_file_path, \"w\", encoding=\"utf-8\") as f:\n",
     "    json.dump([{\"text\": doc.page_content, \"source\": doc.metadata[\"source\"]} for doc in docs_processed], f)\n",
     "\n",
-    "print(f\"Processed documents saved to {output_json_file_path}\")\n"
+    "print(f\"Processed documents saved to {langchain_processed_json_file_path}\")\n"
    ]
   },
   {
