--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -195,6 +195,109 @@
     "print(f\"Below is the first QA couple generated:\")\n",
     "display(pd.DataFrame(QA_initial_outputs).head(1))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re # importing the regex library\n",
+    "\n",
+    "# Save outputs to a JSON file\n",
+    "QA_critiqued_couples_path = './generated_QAs/critiqued_qa_couples.json'\n",
+    "\n",
+    "# This is a helper function to parse the evaluation response\n",
+    "def parse_evaluation(evaluation):\n",
+    "    try:\n",
+    "        # Use regex to extract 'Evaluation' and 'Total rating'\n",
+    "        eval_match = re.search(r\"Evaluation:\\s*(.+)\", evaluation, re.DOTALL)\n",
+    "        score_match = re.search(r\"Total rating:\\s*(\\d+)\", evaluation)\n",
+    "        \n",
+    "        # Ensure both matches were found\n",
+    "        if not eval_match or not score_match:\n",
+    "            raise ValueError(\"Missing 'Evaluation' or 'Total rating' in response\")\n",
+    "        \n",
+    "        eval_text = eval_match.group(1).strip()\n",
+    "        score = int(score_match.group(1))\n",
+    "        return score, eval_text\n",
+    "    except Exception as e:\n",
+    "        raise ValueError(f\"Error parsing evaluation: {e}\")\n",
+    "\n",
+    "# This is the main function to generate critiques for each QA couple\n",
+    "def generate_critiqued_QA(QA_initial_outputs):\n",
+    "    \n",
+    "    # Create a new list to store the critiqued QA couples \n",
+    "    # initialize it with the initial QA couples\n",
+    "    QA_critiqued_outputs = QA_initial_outputs\n",
+    "    \n",
+    "    print(\"Generating critique for each QA couple...\")\n",
+    "    \n",
+    "    for output in tqdm(QA_critiqued_outputs):\n",
+    "        try:\n",
+    "            evaluations = {\n",
+    "                \"groundedness\": call_llm(\n",
+    "                    llm_client,\n",
+    "                    question_groundedness_critique_prompt.format(\n",
+    "                        context=output[\"context\"], question=output[\"question\"]\n",
+    "                    ),\n",
+    "                ),\n",
+    "                \"relevance\": call_llm(\n",
+    "                    llm_client,\n",
+    "                    question_relevance_critique_prompt.format(question=output[\"question\"]),\n",
+    "                ),\n",
+    "                \"standalone\": call_llm(\n",
+    "                    llm_client,\n",
+    "                    question_standalone_critique_prompt.format(question=output[\"question\"]),\n",
+    "                ),\n",
+    "            }\n",
+    "            for criterion, evaluation in evaluations.items():\n",
+    "                try:\n",
+    "                    score, eval_text = parse_evaluation(evaluation)\n",
+    "                    output.update(\n",
+    "                        {\n",
+    "                            f\"{criterion}_score\": score,\n",
+    "                            f\"{criterion}_eval\": eval_text,\n",
+    "                        }\n",
+    "                    )\n",
+    "                except ValueError as ve:\n",
+    "                    print(f\"Error parsing score or evaluation for criterion '{criterion}': {ve}\")\n",
+    "        except Exception as e:\n",
+    "                print(f\"Unexpected error for output {output}: {e}\")\n",
+    "                continue\n",
+    "    \n",
+    "    # Ensure the directory exists\n",
+    "    os.makedirs(os.path.dirname(QA_critiqued_couples_path), exist_ok=True)\n",
+    "\n",
+    "    with open(QA_critiqued_couples_path, 'w', encoding='utf-8') as json_file:\n",
+    "        json.dump(QA_critiqued_outputs, json_file, ensure_ascii=False, indent=4)\n",
+    "\n",
+    "    print(f\"Generated QA couples saved to {QA_critiqued_couples_path}\")\n",
+    "\n",
+    "    return QA_critiqued_outputs\n",
+    "\n",
+    "\n",
+    "# Check if the dataset file exists\n",
+    "if os.path.exists(QA_critiqued_couples_path) and os.path.getsize(QA_critiqued_couples_path) > 0:\n",
+    "    try:\n",
+    "        with open(QA_critiqued_couples_path, \"r\", encoding=\"utf-8\") as f:\n",
+    "            QA_critiqued_outputs = json.load(f)\n",
+    "            print(f\"Successfully LOADED {len(QA_critiqued_outputs)} QA Critiques\")\n",
+    "    except (json.JSONDecodeError, OSError) as e:\n",
+    "        print(f\"Error loading JSON file: {e}. Recreating dataset.\")\n",
+    "        QA_critiqued_outputs = generate_critiqued_QA(QA_initial_outputs)\n",
+    "else:\n",
+    "    QA_critiqued_outputs = generate_critiqued_QA(QA_initial_outputs)\n",
+    "    \n",
+    "\n",
+    "\n",
+    "\n",
+    "# Display the first QA couple to check the format\n",
+    "print(f\"Below is the CRITIQUED QA couple:\")\n",
+    "display(pd.DataFrame(QA_critiqued_outputs).head(1))\n",
+    "    \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
