renamed final outputs

--- a/mainRAGevaluation.ipynb
+++ b/mainRAGevaluation.ipynb
@@ -17,13 +17,6 @@
     "This notebook demonstrates how you can evaluate your RAG (Retrieval Augmented Generation), by building a synthetic evaluation dataset and using LLM-as-a-judge to compute the accuracy of your system.\n",
     "\n",
     "\n",
-    "RAG systems are complex: here a RAG diagram, where we noted in blue all possibilities for system enhancement:\n",
-    "\n",
-    "<img src=\"https://huggingface.co/datasets/huggingface/cookbook-images/resolve/main/RAG_workflow.png\" height=\"700\">\n",
-    "\n",
-    "Implementing any of these improvements can bring a huge performance boost; but changing anything is useless if you cannot monitor the impact of your changes on the system's performance!\n",
-    "So let's see how to evaluate our RAG system.\n",
-    "\n",
     "### Evaluating RAG performance\n",
     "\n",
     "Since there are so many moving parts to tune with a big impact on performance, benchmarking the RAG system is crucial.\n",
@@ -40,6 +33,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected Reader Model: HuggingFace\n",
+      "Selected Judge Model: Claude\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Uncomment Selected Reader/Answering model and Judge/Evaluation model here\n",
+    "# Models selected are used to set the selected models for the pipeline\n",
+    "\n",
+    "\n",
+    "reader_model = 'HuggingFace'\n",
+    "# reader_model = 'ChatGPT'\n",
+    "# reader_model = 'Claude'\n",
+    "\n",
+    "# judge_model = 'HuggingFace'\n",
+    "# judge_model = 'ChatGPT'\n",
+    "judge_model = 'Claude'\n",
+    "\n",
+    "print('Selected Reader Model:', reader_model)\n",
+    "print('Selected Judge Model:', judge_model)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -48,13 +72,12 @@
     "    - `conda create -n <PICK SOME ENVIRONMENT NAME>`\n",
     "    - `conda install python=3.12 pytorch pytorch-cuda transformers accelerate sentence-transformers faiss-gpu openpyxl python-dotenv -c pytorch -c nvidia -c conda-forge -y`\n",
     "- Create open this notebook in VScode and set the jupyter interpreter to `<PICK SOME ENVIRONMENT NAME>`\n",
-    "\n",
-    "## Run the pip install below for the rest of the required packages\n"
+    "- Run the pip install below for the rest of the required packages\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {
     "id": "bCKBvOcp9jVK"
    },
@@ -65,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {
     "id": "k_lJFbYm9jVL"
    },
@@ -84,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +165,7 @@
        "True"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {
     "id": "oIlNZ1Mn9jVL"
    },
@@ -185,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {
     "id": "3gTOlRKO9jVM"
    },
@@ -266,7 +289,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab50732dbcce4c91929c4e8544d9a074",
+       "model_id": "735ebbcbadff4f00a256c2553227939b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -313,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {
     "id": "GoRySj3Q9jVN"
    },
@@ -324,7 +347,7 @@
        "'This is a test context for the `@mui/material` library.\\n\\n## Installation\\n\\n```sh\\nnpm install @mui/material\\n```\\n\\n## Usage\\n\\n```jsx\\nimport React from \\'react\\';\\nimport { Button } from \\'@mui/material\\';\\n\\nfunction App() {\\n  return (\\n    <div className=\"App\">\\n      <Button variant=\"contained\" color=\"primary\">\\n        Hello World\\n      </Button>\\n    </div>\\n  );\\n}\\n\\nexport default App;\\n```\\n\\n## Documentation\\n\\n- [Material-UI](https://material-ui.com/)\\n- [Material Design](https://material.io/)'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {
     "id": "hIM_DJRo9jVN"
    },
@@ -430,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {
     "id": "8fteqDDD9jVN"
    },
@@ -596,7 +619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {
     "id": "05aSgTGs9jVO"
    },
@@ -664,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "metadata": {
     "id": "b9tbk7ME9jVO"
    },
@@ -870,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "metadata": {
     "id": "oBWuOu1b9jVO",
     "outputId": "b32bacea-52f8-486a-96fe-5c188605c5a2"
@@ -959,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1215,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "metadata": {
     "id": "H4fhm55Q9jVO"
    },
@@ -1223,7 +1246,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74c2f69e4bfc48e8989d0b0d2066dbd0",
+       "model_id": "20cb8ede9d6f4520b358d1b41851d967",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1246,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 37,
    "metadata": {
     "id": "sz9Jw2_q9jVO"
    },
@@ -1309,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "metadata": {
     "id": "LqJlIDZR9jVO"
    },
@@ -1392,7 +1415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {
     "id": "9PdpuWyP9jVP"
    },
@@ -1418,15 +1441,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# MAKE SURE YOU CREATE A HUGGING FACE API KEY AND ADD IT BELOW IN `HF_API_TOKEN = \"\"`"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {
     "id": "9SDqenld9jVP"
    },
@@ -1435,7 +1451,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4558/1783810473.py:7: LangChainDeprecationWarning: The class `HuggingFaceHub` was deprecated in LangChain 0.0.21 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEndpoint``.\n",
+      "/tmp/ipykernel_23438/306875939.py:7: LangChainDeprecationWarning: The class `HuggingFaceHub` was deprecated in LangChain 0.0.21 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEndpoint``.\n",
       "  READER_LLM = HuggingFaceHub(\n"
      ]
     }
@@ -1443,11 +1459,11 @@
    "source": [
     "from langchain_community.llms import HuggingFaceHub\n",
     "\n",
-    "repo_id = \"HuggingFaceH4/zephyr-7b-beta\"\n",
-    "READER_MODEL_NAME = \"zephyr-7b-beta\"\n",
-    "HF_API_TOKEN = os.getenv(\"HF_API_TOKEN\")\n",
-    "\n",
-    "READER_LLM = HuggingFaceHub(\n",
+    "if reader_model == 'HuggingFace':\n",
+    "    repo_id = \"HuggingFaceH4/zephyr-7b-beta\"\n",
+    "    READER_MODEL_NAME = \"zephyr-7b-beta\"\n",
+    "    HF_API_TOKEN = os.getenv(\"HF_API_TOKEN\")\n",
+    "    READER_LLM = HuggingFaceHub(\n",
     "    repo_id=repo_id,\n",
     "    task=\"text-generation\",\n",
     "    huggingfacehub_api_token=HF_API_TOKEN,\n",
@@ -1457,12 +1473,23 @@
     "        \"temperature\": 0.1,\n",
     "        \"repetition_penalty\": 1.03,\n",
     "    },\n",
-    ")"
+    ")\n",
+    "\n",
+    "elif reader_model == 'ChatGPT':\n",
+    "    repo_id = \"openai/chatgpt-4\"\n",
+    "    READER_MODEL_NAME = \"gpt-4-1106-preview\"\n",
+    "    OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
+    "elif reader_model == 'Claude':\n",
+    "    repo_id = \"Claude-3-sonnet\"\n",
+    "    ANTHROPIC_API_TOKEN = os.getenv(\"ANTHROPIC_API_TOKEN\")\n",
+    "    READER_MODEL_NAME = \"Claude-3-sonnet\"\n",
+    "    \n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {
     "id": "QZ62CbcZ9jVP"
    },
@@ -1532,7 +1559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {
     "id": "VrlMh_ZI9jVP"
    },
@@ -1586,7 +1613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {
     "id": "Ae-3KWzK9jVP"
    },
@@ -1637,14 +1664,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MAKE SURE YOU CREATE A HUGGING FACE API KEY AND ADD IT BELOW IN `OPEN_AI_KEY = \"\"`\n",
+    "#  Define a model to judge \n",
+    "\n",
+    "- MAKE SURE YOU CREATE A HUGGING FACE API KEY AND ADD IT BELOW IN `OPEN_AI_KEY = \"\"`\n",
     "\n",
     "- Other chat models can be loaded following the documentation for [langchain here](https://python.langchain.com/v0.1/docs/modules/model_io/chat/quick_start/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 44,
    "metadata": {
     "id": "ia9Mvn859jVP"
    },
@@ -1652,10 +1681,22 @@
    "source": [
     "from langchain_anthropic import ChatAnthropic\n",
     "\n",
-    "ANTHROPIC_API_KEY = os.getenv(\"ANTHROPIC_API_KEY\")\n",
     "\n",
-    "eval_chat_model = ChatAnthropic(model=\"claude-3-sonnet-20240229\", api_key=ANTHROPIC_API_KEY)\n",
-    "evaluator_name = \"Claude-3-Sonnet\"\n",
+    "if judge_model == 'Claude':\n",
+    "    ANTHROPIC_API_KEY = os.getenv(\"ANTHROPIC_API_KEY\")\n",
+    "    eval_chat_model = ChatAnthropic(model=\"claude-3-sonnet-20240229\", api_key=ANTHROPIC_API_KEY)\n",
+    "    evaluator_name = \"Claude-3-Sonnet\"\n",
+    "\n",
+    "elif judge_model == 'HuggingFace':\n",
+    "    repo_id = \"HuggingFaceH4/zephyr-7b-beta\"\n",
+    "    eval_chat_model= \"zephyr-7b-beta\"\n",
+    "    HF_API_TOKEN = os.getenv(\"HF_API_TOKEN\")\n",
+    "    \n",
+    "elif judge_model == 'ChatGPT':\n",
+    "    OPENAI_API_KEY = os.getenv(\"OPENAI_API_KEY\")\n",
+    "    eval_chat_model = ChatOpenAI(model=\"gpt-4-1106-preview\", temperature=0, openai_api_key=OPENAI_API_KEY)\n",
+    "    evaluator_name = \"gpt-4-1106-preview\"\n",
+    "\n",
     "\n",
     "\n",
     "def evaluate_answers(\n",
@@ -1700,7 +1741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {
     "id": "jW2nnvUT9jVQ"
    },
@@ -1710,7 +1751,21 @@
      "output_type": "stream",
      "text": [
       "Running evaluation for chunk:200_embeddings:thenlper~gte-small_rerank:True_reader-model:zephyr-7b-beta:\n",
-      "Loading knowledge base embeddings...\n",
+      "Loading knowledge base embeddings...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_23438/2918242049.py:25: LangChainDeprecationWarning: The class `HuggingFaceEmbeddings` was deprecated in LangChain 0.2.2 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-huggingface package and should be used instead. To use it run `pip install -U :class:`~langchain-huggingface` and import as `from :class:`~langchain_huggingface import HuggingFaceEmbeddings``.\n",
+      "  embedding_model = HuggingFaceEmbeddings(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Running RAG...\n"
      ]
     },
@@ -1725,7 +1780,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8839e16c22f24bf2aece65a867ff2b27",
+       "model_id": "12ef2a0655204f16a8804aa6185cd0ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1746,7 +1801,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "582c550b6f6e4694838ea2ed7aac7996",
+       "model_id": "c4025493487d4f61b05e653ce0ecd3b9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1769,7 +1824,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "12e68253600b4b74b887dca221e552b0",
+       "model_id": "d50edc3014604bdebdb5d09f587460cb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1790,7 +1845,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07faf0befbb04d57a2da7e574dfbac33",
+       "model_id": "20646d84f087451cb0748349e72d862e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1856,11 +1911,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 51,
    "metadata": {
     "id": "D4YDSfmr9jVT"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are a total of 312 evaluations.\n"
+     ]
+    }
+   ],
    "source": [
     "import glob\n",
     "\n",
@@ -1869,32 +1932,34 @@
     "    output = pd.DataFrame(json.load(open(file, \"r\")))\n",
     "    output[\"settings\"] = file\n",
     "    reader_judge_outputs.append(output)\n",
-    "result = pd.concat(reader_judge_outputs)"
+    "result = pd.concat(reader_judge_outputs)\n",
+    "\n",
+    "print(\"There are a total of {} evaluations.\".format(len(result)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {
     "id": "CdkXMNvS9jVT"
    },
    "outputs": [],
    "source": [
     "# Remove rows with N/A values before processing\n",
-    "result = result[result[\"eval_score_Claude-3-Sonnet\"].str.strip().str.lower() != \"n/a\"]\n",
+    "result = result[result[f\"eval_score_{evaluator_name}\"].str.strip().str.lower() != \"n/a\"]\n",
     "\n",
     "# Filter out non-integer values between 1-5\n",
-    "result = result[result[\"eval_score_Claude-3-Sonnet\"].str.contains(r'^[1-5]$')]\n",
+    "result = result[result[f\"eval_score_{evaluator_name}\"].str.contains(r'^[1-5]$')]\n",
     "\n",
     "# Convert to integer\n",
-    "result[\"eval_score_Claude-3-Sonnet\"] = result[\"eval_score_Claude-3-Sonnet\"].astype(int)\n",
+    "result[f\"eval_score_{evaluator_name}\"] = result[f\"eval_score_{evaluator_name}\"].astype(int)\n",
     "\n",
-    "result[\"eval_score_Claude-3-Sonnet\"] = (result[\"eval_score_Claude-3-Sonnet\"] - 1) / 4\n"
+    "result[f\"eval_score_{evaluator_name}\"] = (result[f\"eval_score_{evaluator_name}\"] - 1) / 4\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 48,
    "metadata": {
     "id": "lgxBpid29jVT",
     "outputId": "9a3bcf32-4b0c-4df1-c76c-3ebbca82929d"
@@ -1909,13 +1974,13 @@
        "Name: eval_score_Claude-3-Sonnet, dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "average_scores = result.groupby(\"settings\")[\"eval_score_Claude-3-Sonnet\"].mean()\n",
+    "average_scores = result.groupby(\"settings\")[f\"eval_score_{evaluator_name}\"].mean()\n",
     "average_scores.sort_values()"
    ]
   },
@@ -1928,7 +1993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1947,14 +2012,14 @@
     }
    ],
    "source": [
-    "average_scores = result.groupby(\"settings\")[[\"eval_score_Claude-3-Sonnet\"]].mean().reset_index()\n",
+    "average_scores = result.groupby(\"settings\")[[f\"eval_score_{evaluator_name}\"]].mean().reset_index()\n",
     "print(average_scores.columns)\n",
     "print(average_scores.head())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -2844,7 +2909,7 @@
          }
         },
         "title": {
-         "text": "<b>Accuracy of Different RAG Configurations for 149 Filtered Q/A Pairs evaluated by claude-3-sonnet-20240229</b>"
+         "text": "<b>Accuracy of Different RAG Configurations for 149 Filtered Q/A Pairs evaluated by Claude-3-Sonnet</b>"
         },
         "width": 1000,
         "xaxis": {
@@ -2897,7 +2962,7 @@
     "average_scores['formatted_settings'] = average_scores['settings'].apply(format_settings)\n",
     "\n",
     "# Multiply the scores by 100 to convert to percentage\n",
-    "average_scores['eval_score_percentage'] = average_scores['eval_score_Claude-3-Sonnet'] * 100\n",
+    "average_scores['eval_score_percentage'] = average_scores[f\"eval_score_{evaluator_name}\"] * 100\n",
     "\n",
     "# Now use 'formatted_settings' in the plot\n",
     "fig = px.bar(\n",
@@ -2918,7 +2983,7 @@
     "    height=600,\n",
     "    barmode=\"group\",\n",
     "    yaxis_range=[0, 100],  # Adjusting range to [0, 100] for percentage\n",
-    "    title=\"<b>Accuracy of Different RAG Configurations for 149 Filtered Q/A Pairs evaluated by claude-3-sonnet-20240229</b>\",\n",
+    "    title=f\"<b>Accuracy of Different RAG Configurations for 149 Filtered Q/A Pairs evaluated by {evaluator_name}</b>\",\n",
     "    xaxis_title=\"RAG Settings\",\n",
     "    font=dict(size=11),\n",
     ")\n",
